sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not found: value i
    if (!plusPetit(i,i+1)) {
                   ^AlgGnomeSort:5: error: not found: value i
    if (!plusPetit(i,i+1)) {
                     ^AlgGnomeSort:6: error: not found: value i
      echange(i,i+1)
              ^AlgGnomeSort:6: error: not found: value i
      echange(i,i+1)
                ^AlgGnomeSort:14: error: not found: value getValeurNombre
  } while (pos!=getValeurNombre()-1)
                ^